--- a/css/common.css
+++ b/css/common.css
@@ -169,3 +169,14 @@ p {
         background-color: #f2f2f2;
     }
 }
+
+/* フッターのスタイル */
+footer {
+    text-align: center;
+    padding: 20px;
+    margin-top: 40px;
+    background-color: #f8f8f8;
+    border-top: 1px solid #e0e0e0;
+    color: #666;
+    font-size: 0.9em;
+}
